--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "axios": "^1.6.8",
+    "commander": "^12.0.0",
     "dotenv": "^16.4.5",
     "pg": "^8.11.5",
     "sequelize": "^6.37.2"
