--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   ],
   "dependencies": {
     "axios": "^1.6.8",
+    "commander": "^12.0.0",
     "dotenv": "^16.4.5",
+    "mysql2": "^3.9.4",
     "pg": "^8.11.5",
     "sequelize": "^6.37.2"
   }
