--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "CLI tool for shortening URLs using the Bitly API",
   "main": "src/index.js",
   "bin": {
-    "url_shortener": "/src/index.js"
+    "url_shortener": "src/index.js"
   },
   "scripts": {
     "start": "node src/index.js"
